Support for param names.

--- a/testgen/TODO.txt
+++ b/testgen/TODO.txt
@@ -1,10 +1,9 @@
 1. Support for JavaBeans
 2. Support for params with factory method (valueOf, fromString) and String based constructor
-2. Support for collections
-3. Support for generic methods/generic types
-4. Support for non-static methods + method from super class (method.getDeclaringClass)
-5. Logging / console output
-6. Real param names + better res names
-7. Problem with EXPAND_FRAMES (why needed)
-8. Setting proper Max Stack
-9. Test methods sorting
+3. Support for enum param
+4. Support for collections
+5. Support for generic methods/generic types
+6. Support for non-static methods + method from super class (method.getDeclaringClass)
+7. Logging / console output
+9. Problem with EXPAND_FRAMES (why needed)
+10. Setting proper Max Stack
