--- a/testgen/TODO.txt
+++ b/testgen/TODO.txt
@@ -1,9 +1,10 @@
 1. Support for JavaBeans
 2. Support for params with factory method (valueOf, fromString) and String based constructor
-3. Support for enum param
+
 4. Support for collections
 5. Support for generic methods/generic types
 6. Support for non-static methods + method from super class (method.getDeclaringClass)
 7. Logging / console output
 9. Problem with EXPAND_FRAMES (why needed)
 10. Setting proper Max Stack
+11. Configure agent using properties file
