--- a/testgen/TODO.txt
+++ b/testgen/TODO.txt
@@ -5,6 +5,5 @@
 5. Support for generic methods/generic types
 6. Support for non-static methods + method from super class (method.getDeclaringClass)
 
-9. Problem with EXPAND_FRAMES (why needed)
-10. Setting proper Max Stack
-11. Configure agent using properties file
+11. Support for exceptions
+12. Support for serializable classes
