--- a/testgen/TODO.txt
+++ b/testgen/TODO.txt
@@ -1,9 +1,9 @@
-
-
 1. Interfejse proxy params
+
    - parametryzacja
    - generic params
 
-2. Improve method template generation (###)
 
-2. Zaznajomic sie z CodeModel: https://codemodel.java.net/
+2. When recording mock params reuse same proxy instance for same object instance.
+
+3. Helper method 'res' musi być static.
